--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,14 +10,14 @@ jobs:
         include:
         # linux
         - os: ubuntu-latest
-          python: 3.10
+          python: '3.10'
           toxenv: py
         - os: ubuntu-latest
-          python: 3.10
+          python: '3.10'
           toxenv: linters
         # windows
         - os: windows-latest
-          python: 3.10
+          python: '3.10'
           toxenv: py
     runs-on: ${{ matrix.os }}
     steps:
