[#4] FEEL Types: Functions for Boolean Type

--- a/tox.ini
+++ b/tox.ini
@@ -63,8 +63,8 @@ commands =
 extend-ignore =
     # Missing docstrings
     D100, D101, D102, D104, D107
-    # function name should be lowercase
-    N802
+    # function and variable names should be lowercase
+    N802, N806
 per-file-ignores =
     tests/*: D
 max-line-length = 150
