Add CI files to build and release the project

--- a/.gitignore
+++ b/.gitignore
@@ -9,12 +9,14 @@ __pychache__
 **/.ipynb_checkpoints
 
 # CI files
-.eggs
-*egg-info
-dist/
-.coverage
 .venv
+.tox
+.coverage
+target/
+dist/
 build/
 sphink-doc/
 test-reports/
-.tox
+.eggs
+*egg-info
+*.log
