--- a/setup.cfg
+++ b/setup.cfg
@@ -26,8 +26,10 @@ tests_requires =
     # allows generation of coverage reports with pytest
     pytest-cov>=3.0.0
     # checks style, syntax and other useful errors
-    pylint>=2.14.3
+    pylint>=2.14.5
     flake8>=4.0.1
+    # tox ci framework
+    tox>=3.25.1
 
 python_requires = >=3.10
 
