--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
-isolated_build = True
 minversion=3.25.0
 envlist = py310,pylint,flake8,linters
+isolated_build = True
 
 [testenv]
 deps =
@@ -29,7 +29,7 @@ commands =
 skip_install = true
 deps =
     pyflakes
-    pylint>=2.14.3
+    pylint>=2.14.5
 commands =
     pylint src/
 
@@ -38,7 +38,7 @@ skip_install = true
 deps =
     bandit
 commands =
-    bandit -r src/com/ -c .bandit.yml
+    bandit -r src/ -c .bandit.yml
 
 [testenv:linters]
 skip_install = true
@@ -69,3 +69,21 @@ per-file-ignores =
     tests/*: D
 max-line-length = 150
 max-complexity = 10
+
+# Release tooling
+[testenv:build]
+skip_install = true
+deps =
+    wheel
+    setuptools
+commands =
+    python setup.py sdist bdist_wheel
+
+[testenv:release]
+skip_install = true
+deps =
+    {[testenv:build]deps}
+    twine >= 1.5.0
+commands =
+    {[testenv:build]commands}
+    twine upload --skip-existing dist/*
