[#6] FEEL Types: Functions for Date Type

--- a/setup.cfg
+++ b/setup.cfg
@@ -20,6 +20,8 @@ classifiers =
 packages = find:
 package_dir =
     =src
+install_requires =
+    isodate
 tests_requires =
     # framework that makes it easy to write small tests
     pytest>=7.1.2
