[#9] FEEL Types: Functions for List Type. Refactor packages to jdmn as root

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = jdmn-python-runtime
-version = attr: com.__version__
+version = attr: jdmn.__version__
 description = jdmn-python-runtime is a library that supports the execution of DMN
 long_description = file: README.md
 long_description_content_type = text/markdown
@@ -15,6 +15,10 @@ license_files =
 classifiers =
     Programming Language :: Python
     Programming Language :: Python :: 3.10
+
+[project.urls]
+"Homepage" = "https://github.com/goldmansachs/jdmn-python-runtime"
+"Issues" = "https://github.com/goldmansachs/jdmn-python-runtime/issues"
 
 [options]
 packages = find:
@@ -32,6 +36,7 @@ tests_requires =
     flake8>=4.0.1
     # tox ci framework
     tox>=3.25.1
+include_package_data = True
 
 python_requires = >=3.10
 
