[#9] FEEL Types: Functions for List Type. Replace regular packages with namespace packages

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = jdmn-python-runtime
-version = attr: jdmn.__version__
+version = attr: jdmn.version.__version__
 description = jdmn-python-runtime is a library that supports the execution of DMN
 long_description = file: README.md
 long_description_content_type = text/markdown
@@ -21,7 +21,7 @@ classifiers =
 "Issues" = "https://github.com/goldmansachs/jdmn-python-runtime/issues"
 
 [options]
-packages = find:
+packages = find_namespace:
 package_dir =
     =src
 install_requires =
