--- a/tox.ini
+++ b/tox.ini
@@ -5,31 +5,37 @@ isolated_build = True
 
 [testenv]
 deps =
-    pytest>=7.1.2
-    coverage>=6
+    -Ur{toxinidir}/requirements.txt
+    -Ur{toxinidir}/requirements.testing.txt
 commands =
     coverage run -m pytest {posargs}
-    coverage report
-    # ensure 100% coverage of tests
-    coverage report --fail-under 100 --include tests/*
+    coverage report --include src/* --show-missing --fail-under 75
 
 # Linters
-[testenv:flake8]
+[testenv:linters]
 skip_install = true
 deps =
-    flake8
-    flake8-bugbear
-    flake8-docstrings>=1.3.1
-    flake8-typing-imports>=1.1
-    pep8-naming
+    {[testenv:flake8]deps}
+    {[testenv:pylint]deps}
+    {[testenv:bandit]deps}
+    {[testenv:readme]deps}
+commands =
+    {[testenv:flake8]commands}
+    {[testenv:pylint]commands}
+    {[testenv:bandit]commands}
+    {[testenv:readme]commands}
+
+[testenv:flake8]
+deps =
+    {[testenv]deps}
+skip_install = true
 commands =
     flake8 src/ tests/ setup.py
 
 [testenv:pylint]
 skip_install = true
 deps =
-    pyflakes
-    pylint>=2.14.5
+    {[testenv]deps}
 commands =
     pylint src/
 
@@ -39,19 +45,6 @@ deps =
     bandit
 commands =
     bandit -r src/ -c .bandit.yml
-
-[testenv:linters]
-skip_install = true
-deps =
-    {[testenv:flake8]deps}
-    {[testenv:pylint]deps}
-    {[testenv:readme]deps}
-    {[testenv:bandit]deps}
-commands =
-    {[testenv:flake8]commands}
-    {[testenv:pylint]commands}
-    {[testenv:readme]commands}
-    {[testenv:bandit]commands}
 
 [testenv:readme]
 deps =
