--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,11 @@
 [tool.pytest.ini_options]
-pythonpath = "src"
-testpaths = "tests/"
+pythonpath = [
+    "src",
+    "tests"
+]
+testpaths = [
+    "tests"
+]
 norecursedirs = ".git .* *.egg* docs dist build"
 python_files = "*Test.py"
 python_functions = "check*"
