--- a/setup.cfg
+++ b/setup.cfg
@@ -14,7 +14,7 @@ license_files =
     LICENSE.txt
 classifiers =
     Programming Language :: Python
-    Programming Language :: Python :: 3.10
+    Programming Language :: Python :: 3
 
 [project.urls]
 "Homepage" = "https://github.com/goldmansachs/jdmn-python-runtime"
@@ -26,6 +26,9 @@ package_dir =
     =src
 install_requires =
     isodate
+    pytz
+    lxml
+    elementpath
 tests_requires =
     # framework that makes it easy to write small tests
     pytest>=7.1.2
@@ -38,7 +41,7 @@ tests_requires =
     tox>=3.25.1
 include_package_data = True
 
-python_requires = >=3.10
+python_requires = >=3.8
 
 [options.packages.find]
 where = src
