--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 minversion = 3.25.0
-envlist = py310, pylint, flake8, linters
+envlist = py{38,310}, pylint, flake8, linters
 isolated_build = True
 
 [testenv]
