[#17] FEEL Standard Lib. Fix dependencies

--- a/setup.cfg
+++ b/setup.cfg
@@ -26,7 +26,8 @@ package_dir =
     =src
 install_requires =
     isodate
-    pytz
+    python-dateutil
+    tzdata
     lxml
     elementpath
 tests_requires =
