--- a/.deepsource.toml
+++ b/.deepsource.toml
@@ -4,5 +4,8 @@ version = 1
 name = "python"
 enabled = true
 
+name = "test-coverage"
+enabled = true
+
   [analyzers.meta]
   runtime_version = "3.x.x"
