[#29] Extend Range to support operators

--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,12 @@
 [tox]
-minversion = 3.25.0
-envlist = py{310}, pylint, flake8, linters
+minversion = 4.11.3
+envlist = py{312}, pylint, flake8, linters
 isolated_build = True
 
 [testenv]
 deps =
-    -Ur{toxinidir}/requirements.txt
-    -Ur{toxinidir}/requirements.testing.txt
+    -r{toxinidir}/requirements.txt
+    -r{toxinidir}/requirements.testing.txt
 commands =
     coverage run -m pytest {posargs}
     coverage report --include src/* --show-missing --fail-under 70
