Add CI files for unix

--- a/tox.ini
+++ b/tox.ini
@@ -53,6 +53,7 @@ commands =
     python setup.py check -r -s
 
 [flake8]
+exclude = .pytest_cache, .tox, .venv, build, dist
 extend-ignore =
     # Missing docstrings
     D100, D101, D102, D104, D105, D107
