--- a/pom.xml
+++ b/pom.xml
@@ -16,18 +16,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <groupId>com.goldmansachs.jdmn</groupId>
-        <artifactId>jdmn-parent</artifactId>
-        <version>6.2.1-SNAPSHOT</version>
-    </parent>
-
+    <groupId>com.goldmansachs.jdmn</groupId>
     <artifactId>jdmn-python-runtime</artifactId>
-    <name>jDMN: Core</name>
+    <name>jDMN: Python Runtime</name>
+    <version>1.0.6-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <profiles>
         <profile>
+            <id>it-windows</id>
             <activation>
                 <os>
                     <family>windows</family>
@@ -45,6 +42,53 @@
                                 <phase>test</phase>
                                 <configuration>
                                     <executable>ci_build.bat</executable>
+                                    <workingDirectory>${project.basedir}</workingDirectory>
+                                </configuration>
+                                <goals>
+                                    <goal>exec</goal>
+                                </goals>
+                            </execution>
+                            <execution>
+                                <id>python-build</id>
+                                <phase>prepare-package</phase>
+                                <configuration>
+                                    <executable>python</executable>
+                                    <workingDirectory>${project.basedir}</workingDirectory>
+                                    <arguments>
+                                        <argument>setup.py</argument>
+                                        <argument>sdist</argument>
+                                        <argument>bdist_wheel</argument>
+                                    </arguments>
+                                </configuration>
+                                <goals>
+                                    <goal>exec</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+        <profile>
+            <id>it-linux</id>
+            <activation>
+                <os>
+                    <family>unix</family>
+                </os>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>exec-maven-plugin</artifactId>
+                        <version>3.5.0</version>
+                        <executions>
+                            <execution>
+                                <id>python-test</id>
+                                <phase>test</phase>
+                                <configuration>
+                                    <executable>ci_build.sh</executable>
                                     <workingDirectory>${project.basedir}</workingDirectory>
                                 </configuration>
                                 <goals>
